--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,14 +30,17 @@
               android:layout_marginBottom="14dp"
               android:layout_marginRight="18dp"
               app:srcCompat="?android:attr/actionModeWebSearchDrawable" />
+
           <EditText
+              android:id="@+id/search_edit_text"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:layout_marginRight="102dp"
               android:layout_marginBottom="14dp"
+              android:layout_marginRight="102dp"
               android:layout_marginTop="10dp"
+              android:background="@color/white"
               android:hint="Поиск"
-              android:background="@color/white"/>
+              android:singleLine="true" />
 
       </LinearLayout>
 
@@ -48,6 +51,7 @@
           android:layout_gravity="right"
           android:layout_marginRight="30dp"
           android:layout_marginTop="24dp"
+          android:id="@+id/info_image_view"
           android:contentDescription="@string/info"
           app:srcCompat="@android:drawable/ic_menu_info_details" />
 
@@ -126,7 +130,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="36dp"
-                    android:background="@color/grey"
+                    android:background="@drawable/strike"
                     android:orientation="vertical">
 
                     <TextView
@@ -140,17 +144,45 @@
 
 
                 </LinearLayout>
-                <LinearLayout
+                <FrameLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/sales_linear_layout"
-                    android:orientation="vertical">
+                    android:background="@color/grey"
 
-                </LinearLayout>
+
+
+                    android:orientation="vertical">
+                    <android.support.constraint.ConstraintLayout
+                        android:layout_width="86dp"
+                        android:layout_height="match_parent"
+                        android:background="@color/trash_red"
+                        android:layout_gravity="right"
+                        android:visibility="gone"
+                        >
+
+                        <ImageView
+                            android:layout_width="19dp"
+                            android:layout_height="19dp"
+
+
+                            android:layout_marginBottom="8dp"
+                            android:layout_marginEnd="8dp"
+                            android:layout_marginStart="8dp"
+                            android:layout_marginTop="8dp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:srcCompat="@android:drawable/ic_menu_delete" />
+
+                    </android.support.constraint.ConstraintLayout>
+
+                </FrameLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@color/grey"
+                    android:background="@drawable/strike"
                     android:orientation="horizontal">
 
                         <TextView
@@ -171,6 +203,7 @@
                 <LinearLayout
                     android:id="@+id/other_linear_layout"
                     android:layout_width="match_parent"
+                    android:background="@color/grey"
                     android:layout_height="match_parent"
                     android:orientation="vertical">
 
