--- a/app/src/main/res/layout/layout_list_item.xml
+++ b/app/src/main/res/layout/layout_list_item.xml
@@ -1,25 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_margin="10dp"
-
-
-    android:orientation="vertical">
 
 
     <!--ТУт старый рабочий код-->
-    <FrameLayout
-        android:layout_width="235dp"
-        android:layout_height="165dp"
-        >
+
 
 <android.support.v7.widget.CardView
-       app:cardCornerRadius="25dp"
-    android:elevation="7dp"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+       app:cardCornerRadius="15dp"
+    android:elevation="10dp"
+android:layout_margin="10dp"
+    android:layout_width="235dp"
+    android:layout_height="165dp"
     >
     <ImageView
         android:id="@+id/top_recyclerView_image"
@@ -27,40 +19,39 @@
         android:layout_height="match_parent"
         app:srcCompat="@mipmap/ic_launcher"
         />
-</android.support.v7.widget.CardView>
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="52dp"
+        android:layout_gravity="bottom"
+        android:background="@color/light_white"
+        android:elevation="10dp"
+        android:visibility="visible">
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="52dp"
-            android:layout_gravity="bottom"
-            android:background="@color/light_white"
-            android:elevation="10dp"
-            android:visibility="visible">
+        <TextView
+            android:id="@+id/top_recyclerView_Text"
+            android:layout_width="232dp"
+            android:layout_height="22dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:text="Вода" />
 
-            <TextView
-                android:id="@+id/top_recyclerView_Text"
-                android:layout_width="232dp"
-                android:layout_height="22dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
-                android:text="Вода" />
+        <TextView
+            android:id="@+id/top_recyclerView_Desc"
+            android:layout_width="232dp"
+            android:layout_height="20dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="25dp"
+            android:text="Источник жизни"
 
-            <TextView
-                android:id="@+id/top_recyclerView_Desc"
-                android:layout_width="232dp"
-                android:layout_height="20dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="25dp"
-                android:text="Источник жизни"
-
-                />
-
-
-        </FrameLayout>
+            />
 
 
     </FrameLayout>
 
 
-</LinearLayout>
+</android.support.v7.widget.CardView>
+
+
+
+
