--- a/app/src/main/res/layout/sales_layout.xml
+++ b/app/src/main/res/layout/sales_layout.xml
@@ -1,86 +1,139 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_marginBottom="2dp"
+    android:background="@color/white"
+
+    >
+
+<android.support.constraint.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="120dp"
     android:id="@+id/sales_constrant_layout"
+    android:background="@color/white"
     android:paddingLeft="17dp"
     android:paddingBottom="17dp"
     android:paddingTop="17dp"
     >
-    <android.support.v7.widget.CardView
-        android:layout_width="119dp"
-        android:layout_height="87dp"
-        app:cardCornerRadius="10dp"
-        android:layout_marginBottom="17dp"
-        android:layout_marginStart="17dp"
-        android:layout_marginTop="18dp"
-        android:layout_marginLeft="17dp"
-        >
-    <ImageView
-        android:id="@+id/item_Photo_ImageView"
-        android:layout_width="119dp"
-        android:layout_height="87dp"
 
+    <android.support.v7.widget.CardView
+        android:id="@+id/cardView"
+        android:layout_width="119dp"
+        android:layout_height="87dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="8dp"
+        app:cardCornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+        app:layout_constraintVertical_bias="0.51">
+
+        <ImageView
+            android:id="@+id/item_Photo_ImageView"
+            android:layout_width="119dp"
+            android:layout_height="87dp"
+
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@mipmap/ic_launcher_round" />
     </android.support.v7.widget.CardView>
+
     <TextView
         android:id="@+id/item_name_TextView"
-        android:layout_width="119dp"
-        android:layout_height="33dp"
-        android:layout_marginStart="17dp"
-        android:layout_marginTop="1dp"
+        android:layout_width="wrap_content"
+        android:layout_height="23dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="152dp"
+        android:fontFamily="sans-serif"
+        android:lineSpacingExtra="3sp"
         android:text="Test Name"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textColor="#000000"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/item_group_TextView"
-        android:layout_width="121dp"
-        android:layout_height="18dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="15dp"
+        android:layout_marginStart="152dp"
+        android:layout_marginTop="24dp"
         android:text="test support text"
-        app:layout_constraintTop_toBottomOf="@+id/item_name_TextView" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/cart_imageView"
         android:layout_width="23dp"
         android:layout_height="23dp"
-        android:layout_marginStart="152dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="148dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/images"
-        tools:layout_editor_absoluteY="81dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/images" />
 
     <TextView
         android:id="@+id/discount_ammount"
         android:layout_width="46dp"
         android:layout_height="20dp"
-        android:layout_marginStart="57dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/discount_ammount_item"
+        android:paddingLeft="10dp"
         android:text="-50%"
-        app:layout_constraintStart_toEndOf="@+id/item_Photo_ImageView"
-        tools:layout_editor_absoluteY="84dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/cardView"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/old_old_price"
-        android:layout_width="30dp"
+        android:layout_width="wrap_content"
         android:layout_height="16dp"
-        android:layout_marginBottom="2dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="312dp"
+        android:layout_marginTop="8dp"
         android:text="100p"
         app:layout_constraintBottom_toTopOf="@+id/new_price"
-        tools:layout_editor_absoluteX="311dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.44"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.836" />
 
     <TextView
         android:id="@+id/new_price"
         android:layout_width="36dp"
         android:layout_height="18dp"
-        android:layout_marginStart="72dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="312dp"
+        android:layout_marginTop="52dp"
+        android:gravity="center_horizontal"
         android:text="50p"
-        app:layout_constraintStart_toEndOf="@+id/discount_ammount"
-        tools:layout_editor_absoluteY="86dp" />
+        android:textColor="@color/discount_red"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.454"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
 </android.support.constraint.ConstraintLayout>
+
+</FrameLayout>
