--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="grey">#f7f8f8</color>
+    <color name="grey">#efeff4</color>
     <color name="white">#ffffff</color>
     <color name="light_blue">#588ae9</color>
     <color name="light_white">#99ffffff</color>
